deployment/kubernetes/agenda.yml
apiVersion: v1
kind: Service
metadata:
  name: agenda
spec:
  selector:
    app: agenda
    tier: backend
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3002

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: agenda
spec:
  selector:
    matchLabels:
      app: agenda
      tier: backend
      track: stable
  replicas: 1
  template:
    metadata:
      labels:
        app: agenda
        tier: backend
        track: stable
    spec:
      containers:
        - name: agenda
          image: izou3/agenda:2.4
          ports:
            - containerPort: 3002
