deployment/kubernetes/landing.yml
kind: Service
apiVersion: v1
metadata:
  name: landing
spec:
  selector:
    app: landing
  ports:
    - protocol: "TCP"
      # Port accessible inside cluster
      port: 80
      # Port to forward to inside the pod.
      targetPort: 3000

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: landing
spec:
  selector:
    matchLabels:
      app: landing
  replicas: 1
  template:
    metadata:
      labels:
        app: landing
    spec:
      containers:
        - name: landing
          image: izou3/landing:1.1
          ports:
            - containerPort: 3000 # containers in deployment listen on PORT: 80
