deployment/kubernetes/motel_ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: motel-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - www.bigskylodge.com
    - admins.bigskylodge.com
    secretName: motel-tls
  rules:
  - host: www.bigskylodge.com
    http:
      paths:
      - backend:
          serviceName: landing
          servicePort: 80
  - host: admins.bigskylodge.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          serviceName: webapp
          servicePort: 80
      - path: /api
        pathType: Prefix
        backend:
          serviceName: api
          servicePort: 80
      - path: /user
        pathType: Prefix
        backend:
          serviceName: api
          servicePort: 80
      - path: /dash
        pathType: Prefix
        backend:
          serviceName: agenda
          servicePort: 80
